--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="p5.min.js"></script>
+    <script src="p5.sound.js"></script>
     <script src="playerbar.js"></script>   
     <script src="brick.js"></script>  
-    <script src="wall.js"></script>  
+    <script src="ball.js"></script>
     <script src="main.js"></script>
  
 
