--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="p5.min.js"></script>
     <script src="p5.sound.js"></script>
-    <script src="playerbar.js"></script>   
+    <script src="playerbar.js"></script> 
+    <script src="background.js"></script>"  
     <script src="brick.js"></script>  
+    <script src="level.js"></script>
     <script src="ball.js"></script>
     <script src="main.js"></script>
  
