--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="p5.min.js"></script>
     <script src="p5.sound.js"></script>
     <script src="playerbar.js"></script> 
-    <script src="background.js"></script>"  
+    <script src="background.js"></script>  
     <script src="brick.js"></script>  
     <script src="level.js"></script>
     <script src="ball.js"></script>
